<resources>

    <string name="app_name">Triland</string>
    <string name="place_holder_time" translatable="false">00:00:00</string>
    <string name="reset">Reset</string>
    <string name="start">Start</string>
    <string name="stop">Stop</string>
    <string name="train">Training plan</string>
    <string name="professionals">Professionals</string>
    <string name="form">Contact</string>
    <string name="facilities">Facilities</string>
    <string name="qr">QR Reader</string>
    <string name="shop">Shop</string>
    <string name="ranking">Ranking</string>
    <string name="calculator">Calculator</string>
    <string name="chronometer">Chronometer</string>
    <string name="profile">Profile</string>
    <string name="fatCalculator">Body mass index calculator:</string>
    <string name="gender">Gender:</string>
    <string name="female">Female</string>
    <string name="male">Male</string>
    <string name="weightKG">Weight (in Kg):</string>
    <string name="weight">Enter your weight</string>
    <string name="heightCM">Height (in cm):</string>
    <string name="height">Enter your height</string>
    <string name="ageTV">Age:</string>
    <string name="age">Enter your age</string>
    <string name="imcTV">BMI: </string>
    <string name="fat">Body fat: </string>
    <string name="calculate">Calculate</string>
    <string name="clear">Clear</string>
    <string name="facilitiesTV">Our facilities are located on Calle de la Morona in Morón de la Frontera.</string>
    <string name="personalTrain">Personal training area</string>
    <string name="freeTrain">Free training area</string>
    <string name="forgotPass">Enter your email to receive the new password</string>
    <string name="emailET">Enter your email</string>
    <string name="send">Send</string>
    <string name="rememberPass">Remember your password?</string>
    <string name="logInTV">Log in</string>
    <string name="user">User</string>
    <string name="pass">Password</string>
    <string name="forgotPassLogIn">Forgotten your password?</string>
    <string name="logIn">Log in</string>
    <string name="haveAccount">Not have an account?</string>
    <string name="makeOne">Create one</string>
    <string name="email">Email</string>
    <string name="name">Name</string>
    <string name="surname">Surname</string>
    <string name="adress">Adress</string>
    <string name="phone">Phone</string>
    <string name="changeData">Change data</string>
    <string name="save">Save</string>
    <string name="logOut">Log out</string>
    <string name="register">Register</string>
    <string name="alreadyAccount">Already have an account?</string>
    <string name="insertData">Introduce your data correctly, please</string>
    <string name="lowWeight">Underweight</string>
    <string name="healthy">Healthy</string>
    <string name="overWeight">Overweight</string>
    <string name="obesity">Obese</string>
    <string name="setGender">Choose your gender, please</string>
    <string name="setEmailOnForgot">Introduce your email, please</string>
    <string name="sendEmailonForgot">An email has been send to reset your password</string>
    <string name="successfulLogIn">You have successfully logged in</string>
    <string name="wrongEmailPass">Email or password entered incorrectly</string>
    <string name="error">Error</string>
    <string name="accept">Accept</string>
    <string name="scanResult">Scan result: </string>
    <string name="permissionAlready">Permission already granted</string>
    <string name="cameraPGranted">Camera Permission Granted</string>
    <string name="cameraPDenied">Camera Permission Denied</string>
    <string name="registerSuccessful">You have successfully registered</string>
    <string name="enterDataCorrect">Enter all the data correctly, please</string>
    <string name="message">Message</string>
    <string name="nameET">Enter your name</string>
    <string name="messageET">Enter your message</string>
    <string name="passET">Enter your password</string>
    <string name="surnameET">Enter your surname</string>
    <string name="adressET">Enter your adress</string>
    <string name="phoneET">Enter your phone</string>

</resources>