<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/darkBlueTriland"
    tools:context=".AllAppActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <Button
                android:id="@+id/trainingActButton"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="50px"
                android:layout_marginBottom="10dp"
                android:backgroundTint="@color/silverTriland"
                android:drawableLeft="@drawable/ic_fitness"
                android:drawableTint="@color/darkBlueTriland"
                android:hapticFeedbackEnabled="false"
                android:text="@string/train"
                android:textColor="@color/darkBlueTriland" />

            <Button
                android:id="@+id/professionalActButton"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="10px"
                android:layout_marginBottom="10dp"
                android:backgroundTint="@color/silverTriland"
                android:drawableLeft="@drawable/ic_people"
                android:drawableTint="@color/darkBlueTriland"
                android:text="@string/professionals"
                android:textColor="@color/darkBlueTriland" />

            <Button
                android:id="@+id/formActButton"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="10px"
                android:layout_marginBottom="10dp"
                android:backgroundTint="@color/silverTriland"
                android:drawableLeft="@drawable/ic_contact"
                android:drawableTint="@color/darkBlueTriland"
                android:text="@string/form"
                android:textColor="@color/darkBlueTriland" />

            <Button
                android:id="@+id/facilitiesActButton"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="10px"
                android:layout_marginBottom="10dp"
                android:backgroundTint="@color/silverTriland"
                android:drawableLeft="@drawable/ic_map"
                android:drawableTint="@color/darkBlueTriland"
                android:text="@string/facilities"
                android:textColor="@color/darkBlueTriland" />

            <Button
                android:id="@+id/qrActButton"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="10px"
                android:layout_marginBottom="10dp"
                android:backgroundTint="@color/silverTriland"
                android:drawableLeft="@drawable/ic_qr"
                android:drawableTint="@color/darkBlueTriland"
                android:text="@string/qr"
                android:textColor="@color/darkBlueTriland" />

            <Button
                android:id="@+id/calculatorActButton"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="10px"
                android:layout_marginBottom="10dp"
                android:backgroundTint="@color/silverTriland"
                android:drawableLeft="@drawable/ic_calculate"
                android:drawableTint="@color/darkBlueTriland"
                android:text="@string/calculator"
                android:textColor="@color/darkBlueTriland" />

            <Button
                android:id="@+id/chronoActButton"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="10px"
                android:layout_marginBottom="10dp"
                android:backgroundTint="@color/silverTriland"
                android:drawableLeft="@drawable/ic_watch"
                android:drawableTint="@color/darkBlueTriland"
                android:text="@string/chronometer"
                android:textColor="@color/darkBlueTriland" />

            <Button
                android:id="@+id/profileActButton"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="10px"
                android:layout_marginBottom="10dp"
                android:backgroundTint="@color/silverTriland"
                android:drawableLeft="@drawable/ic_person"
                android:drawableTint="@color/darkBlueTriland"
                android:text="@string/profile"
                android:textColor="@color/darkBlueTriland" />

        </LinearLayout>
    </ScrollView>

</RelativeLayout>