<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/darkBlueTriland"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".ChronometerActivity">

    <TextView
        android:id="@+id/timeTV"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:text="@string/place_holder_time"
        android:textAlignment="center"
        android:textColor="@color/silverTriland"
        android:textSize="60sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <Button
            android:id="@+id/startButton"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="20dp"
            android:backgroundTint="@color/silverTriland"
            android:text="@string/start"
            android:textColor="@color/darkBlueTriland" />

        <Button
            android:id="@+id/resetButton"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:backgroundTint="@color/silverTriland"
            android:text="@string/reset"
            android:textColor="@color/darkBlueTriland" />

    </LinearLayout>

</LinearLayout>