<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/darkBlueTriland"
    tools:context=".ForgotPassActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="200dp">

            <ImageView
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="30dp"
                android:layout_marginLeft="4dp"
                android:src="@drawable/logo" />

        </FrameLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="60dp"
            android:layout_marginRight="60dp"
            android:layout_marginBottom="10dp"
            android:gravity="center"
            android:text="@string/forgotPass"
            android:textColor="@color/silverTriland" />

        <EditText
            android:id="@+id/forgotpass_email"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/custom_input"
            android:drawableStart="@drawable/ic_email"
            android:drawablePadding="12dp"
            android:drawableTint="@color/silverTriland"
            android:hint="@string/emailET"
            android:inputType="textEmailAddress"
            android:maxLines="1"
            android:paddingLeft="10dp"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:textColor="@color/silverTriland"
            android:textColorHighlight="@color/silverTriland"
            android:textColorHint="@color/silverTriland"
            android:textColorLink="@color/silverTriland"
            android:textSize="14dp" />

        <Button
            android:id="@+id/forgotpassButton"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="60dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="60dp"
            android:layout_weight="1"
            android:backgroundTint="@color/blueTriland"
            android:gravity="center"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:text="@string/send"
            android:textColor="@color/silverTriland"
            android:textColorHighlight="@color/darkSilverTriland" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/recuerdasTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/rememberPass"
                android:textColor="@color/silverTriland" />

            <TextView
                android:id="@+id/iniciasesionTextView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="2dp"
                android:layout_marginTop="5dp"
                android:foreground="?attr/selectableItemBackground"
                android:text="@string/logInTV"
                android:textColor="@color/silverTriland"
                android:textStyle="bold" />

        </LinearLayout>

    </LinearLayout>

</RelativeLayout>