<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/darkBlueTriland"
    tools:context=".RegisterActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="200dp">

            <ImageView
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="30dp"
                android:layout_marginLeft="4dp"
                android:src="@drawable/logo" />

        </FrameLayout>

        <EditText
            android:id="@+id/register_name"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="10dp"
            android:background="@drawable/custom_input"
            android:drawableStart="@drawable/ic_email"
            android:drawablePadding="12dp"
            android:drawableTint="@color/silverTriland"
            android:hint="@string/name"
            android:inputType="text"
            android:maxLines="1"
            android:paddingLeft="10dp"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:textColor="@color/silverTriland"
            android:textColorHighlight="@color/silverTriland"
            android:textColorHint="@color/silverTriland"
            android:textColorLink="@color/silverTriland"
            android:textSize="14dp"/>

        <EditText
            android:id="@+id/register_surname"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="10dp"
            android:background="@drawable/custom_input"
            android:drawableStart="@drawable/ic_email"
            android:drawablePadding="12dp"
            android:drawableTint="@color/silverTriland"
            android:hint="@string/surname"
            android:inputType="text"
            android:maxLines="1"
            android:paddingLeft="10dp"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:textColor="@color/silverTriland"
            android:textColorHighlight="@color/silverTriland"
            android:textColorHint="@color/silverTriland"
            android:textColorLink="@color/silverTriland"
            android:textSize="14dp"/>

        <EditText
            android:id="@+id/register_email"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="10dp"
            android:background="@drawable/custom_input"
            android:drawableStart="@drawable/ic_email"
            android:drawablePadding="12dp"
            android:drawableTint="@color/silverTriland"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:maxLines="1"
            android:paddingLeft="10dp"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:textColor="@color/silverTriland"
            android:textColorHighlight="@color/silverTriland"
            android:textColorHint="@color/silverTriland"
            android:textColorLink="@color/silverTriland"
            android:textSize="14dp"/>

        <EditText
            android:id="@+id/register_pass"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="10dp"
            android:background="@drawable/custom_input"
            android:drawableStart="@drawable/ic_lock"
            android:drawablePadding="12dp"
            android:drawableTint="@color/silverTriland"
            android:hint="@string/pass"
            android:inputType="textPassword"
            android:maxLines="1"
            android:paddingLeft="10dp"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:textColor="@color/silverTriland"
            android:textColorHighlight="@color/silverTriland"
            android:textColorHint="@color/silverTriland"
            android:textColorLink="@color/silverTriland"
            android:textSize="14dp"/>

        <Button
            android:id="@+id/registerButton"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:backgroundTint="@color/blueTriland"
            android:gravity="center"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:text="@string/register"
            android:textColor="@color/silverTriland"
            android:textColorHighlight="@color/darkSilverTriland" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tienescuentaTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/alreadyAccount"
                android:textColor="@color/silverTriland" />

            <TextView
                android:id="@+id/iniciasesionTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="2dp"
                android:layout_marginTop="5dp"
                android:foreground="?attr/selectableItemBackground"
                android:text="@string/logInTV"
                android:textColor="@color/silverTriland"
                android:textStyle="bold" />

        </LinearLayout>

    </LinearLayout>

</RelativeLayout>